--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>CHEMISTRY POLYMERS ASSIGNMENT</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>CHEMISTRY ASSIGNMENT</h1>
+      <header>
+          <nav>
+              <ul>
+                <li href = "page2.html">Page2</li>
+                <li href = "page2.html">Page2</li>
+                <li href = "page2.html">Page2</li>
+                <li href = "page2.html">Page2</li>
+              </ul>
+          </nav>
+      </header>  
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
