deploy: eb3f03a8413254928622467f2b891701a4cce039

--- a/index.html
+++ b/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.f72635f1.js"></script>
+    <title>CHEMISTRY POLYMERS ASSIGNMENT</title>
+    <script type="module" crossorigin src="/assets/index.42fe4937.js"></script>
     <link rel="stylesheet" href="/assets/index.06d14ce2.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <h1>CHEMISTRY ASSIGNMENT</h1>
+      <header>
+          <nav>
+              <ul>
+                <li href = "page2.html">Page2</li>
+                <li href = "page2.html">Page2</li>
+                <li href = "page2.html">Page2</li>
+                <li href = "page2.html">Page2</li>
+              </ul>
+          </nav>
+      </header>  
+    </div>
     
   </body>
 </html>
