--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
       <header>
           <nav>
               <ul>
-                <li href = "page2.html">Page2</li>
-                <li href = "page2.html">Page2</li>
-                <li href = "page2.html">Page2</li>
-                <li href = "page2.html">Page2</li>
+                <a href = "index.html">Page1</a>&emsp;
+                <span><a href = "page2.html">Page2</a></span>&emsp;
+                <span><a href = "page3.html">Page3</a></span>&emsp;
+                <span><a href = "page4.html">Page4</a></span>
               </ul>
           </nav>
-      </header>  
+      </header>
+      <div class = "container">
+      <img src="https://image.shopmoment.com/resizer?quality=75&width=400&image=https://image.shopmoment.com/general/iPh13_Moment_Black_1.jpg">
+      </div>  
+      <div class = "container">
+       
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
