--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/assets/favicon.e0a5116e.png" />
+    <link rel="icon" type="image/png" href="./assets/favicon.e0a5116e.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHEMISTRY POLYMERS ASSIGNMENT</title>
-    <script type="module" crossorigin src="/assets/index.42fe4937.js"></script>
-    <link rel="stylesheet" href="/assets/index.06d14ce2.css">
+    <script type="module" crossorigin src="./assets/index.42fe4937.js"></script>
+    <link rel="stylesheet" href="./assets/index.06d14ce2.css">
   </head>
   <body>
     <div id="app">
