--- a/index.html
+++ b/index.html
@@ -12,19 +12,61 @@
       <header>
           <nav>
               <ul>
-                <a href = "index.html">Page1</a>&emsp;
+          
+                <a href = "page1.html">Page1</a>&emsp;
                 <span><a href = "page2.html">Page2</a></span>&emsp;
                 <span><a href = "page3.html">Page3</a></span>&emsp;
-                <span><a href = "page4.html">Page4</a></span>
+                <span><a href = "page4.html">Page4</a></span>&emsp;
+                <span><a href = "page5.html">Page5</a></span>
               </ul>
           </nav>
       </header>
       <div class = "container">
-      <img src="https://image.shopmoment.com/resizer?quality=75&width=400&image=https://image.shopmoment.com/general/iPh13_Moment_Black_1.jpg">
-      </div>  
-      <div class = "container">
-       
+      <span><img src="https://image.shopmoment.com/resizer?quality=75&width=400&image=https://image.shopmoment.com/general/iPh13_Moment_Black_1.jpg"></span>
+      <span><p>PROPERTIES AND STRUCTURES</p></span> 
       </div>
+      <div class="container2">
+        <img>
+        <p>PROPERTIES AND STRUCTURES</p>
+        <img>
+        <p>PROPERTIES AND STRUCTURES</p>
+      </div>
+      <div>
+        [13:02] Rajaniraiyn R  21BEC107
+
+        <table border = "3">
+        <tbody>
+        <tr>
+        <td>
+        <span><th>AVAILABLE SOLUTION</th></span>
+        </td>
+        <td>
+        <span>e</span>
+        </td>
+        <td>
+        <span>w</span>
+        </td>
+        <td>
+        <span>q</span>
+        </td>
+        </tr>
+        <tr>
+        <td>
+        <span><th>ALTERNATIVE SOLUTION</th></span>
+        </td>
+        <td>
+        <span>r</span>
+        </td>
+        <td>
+        <span>t</span>
+        </td>
+        <td>
+        <span>j</span>
+        </td>
+        </tr>
+        </tbody>
+      </table>
+      </div> 
     </div>
     <script type="module" src="/main.js"></script>
   </body>
