Fix pages directory

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <header>
           <nav>
               <ul>
-          
-                <a href = "page1.html">Page1</a>&emsp;
-                <span><a href = "page2.html">Page2</a></span>&emsp;
-                <span><a href = "page3.html">Page3</a></span>&emsp;
-                <span><a href = "page4.html">Page4</a></span>&emsp;
-                <span><a href = "page5.html">Page5</a></span>
+                <a href="/">Home</a>
+                <a href="pages/page1.html">Page1</a>
+                <a href="pages/page2.html">Page2</a>
+                <a href="pages/page3.html">Page3</a>
+                <a href="pages/page4.html">Page4</a>
+                <a href="pages/page5.html">Page5</a>
               </ul>
           </nav>
       </header>
