Added image in index

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           
       </header>
       <div class = "container">
-      <img src="MicrosoftTeams-image.png">
+      <img src="assets/MicrosoftTeams-image.png">
       </div>
       <div class="container2">
         <p>Rajaniraiyn R (21BEC107)</p>
