--- a/pages/page4/index.html
+++ b/pages/page4/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastic 3</title>
+    <title>Plastic 4</title>
 </head>
 
 <body>
@@ -14,11 +14,11 @@
             <h1>Plastic 1</h1>
             <nav>
                 <a href="..">Home</a>
-                <a href="page1.html">Page1</a>
-                <a href="page2.html">Page2</a>
-                <a href="page3.html">Page3</a>
-                <a href="page4.html">Page4</a>
-                <a href="page5.html">Page5</a>
+                <a href="page1">Page1</a>
+                <a href="page2">Page2</a>
+                <a href="page3">Page3</a>
+                <a href="page4">Page4</a>
+                <a href="page5">Page5</a>
             </nav>
         </header>
         <div class="container">
@@ -68,7 +68,7 @@
             </tbody>
         </table>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="../main.js"></script>
 </body>
 
 </html>
