Improved NEXT button

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <p>Rajaniraiyn R (21BEC107)</p>
         <p>Tejaswini T (21BEC164)</p>
         <p>Varun M P (21BME095)</p>
-        <form action="pages/page1.html">
-        <input type="button" onclick="location.href = 'pages/page1.html';" value="NEXT">
-        </form>
+        <button>
+          <a href="pages/page1">NEXT</a>
+        </button>
       </div>
      
     </div>
