--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
       <img src="assets/MicrosoftTeams-image.png">
       </div>
       <div class="container2">
+        <h4>TEAM MEMBERS</h4><br/>
         <p>Rajaniraiyn R (21BEC107)</p>
         <p>Tejaswini T (21BEC164)</p>
         <p>Varun M P (21BME095)</p>
+        <form action="pages/page1.html">
+        <input type="button" onclick="location.href = 'pages/page1.html';" value="NEXT">
+        </form>
       </div>
      
     </div>
