deploy: 51cb3d7592d8c847c82e1b99626d77b5e3afb760

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHEMISTRY POLYMERS ASSIGNMENT</title>
     <script type="module" crossorigin src="./assets/index.42fe4937.js"></script>
-    <link rel="stylesheet" href="./assets/index.bd3bc7e3.css">
+    <link rel="stylesheet" href="./assets/index.f6950109.css">
   </head>
   <body>
     <div id="app">
@@ -31,9 +31,13 @@
       <img src="./assets/MicrosoftTeams-image.1362dfdb.png">
       </div>
       <div class="container2">
+        <h4>TEAM MEMBERS</h4><br/>
         <p>Rajaniraiyn R (21BEC107)</p>
         <p>Tejaswini T (21BEC164)</p>
         <p>Varun M P (21BME095)</p>
+        <form action="pages/page1.html">
+        <input type="button" onclick="location.href = 'pages/page1.html';" value="NEXT">
+        </form>
       </div>
      
     </div>
