deploy: ff58e799a83d0dd6338a55f20aafb121a0f8d06f

--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastic 4</title>
+    <title>Plastic 3</title>
+  <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
+  <link rel="stylesheet" href="./assets/style.3a2a908e.css">
 </head>
 
 <body>
@@ -14,11 +16,11 @@
             <h1>Plastic 1</h1>
             <nav>
                 <a href="..">Home</a>
-                <a href="page1.html">Page1</a>
-                <a href="page2.html">Page2</a>
-                <a href="page3.html">Page3</a>
-                <a href="page4.html">Page4</a>
-                <a href="page5.html">Page5</a>
+                <a href="page1">Page1</a>
+                <a href="page2">Page2</a>
+                <a href="page3">Page3</a>
+                <a href="page4">Page4</a>
+                <a href="page5">Page5</a>
             </nav>
         </header>
         <div class="container">
