--- a/pages/page5/index.html
+++ b/pages/page5/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plastic 2</title>
+    <title>Plastic 5</title>
+  <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
+  <link rel="stylesheet" href="./assets/style.3a2a908e.css">
 </head>
 
 <body>
@@ -14,11 +17,11 @@
             <h1>Plastic 1</h1>
             <nav>
                 <a href="..">Home</a>
-                <a href="page1.html">Page1</a>
-                <a href="page2.html">Page2</a>
-                <a href="page3.html">Page3</a>
-                <a href="page4.html">Page4</a>
-                <a href="page5.html">Page5</a>
+                <a href="page1">Page1</a>
+                <a href="page2">Page2</a>
+                <a href="page3">Page3</a>
+                <a href="page4">Page4</a>
+                <a href="page5">Page5</a>
             </nav>
         </header>
         <div class="container">
@@ -36,33 +39,39 @@
                 <tr>
                     <td>
                         <span>
-                            <th>AVAILABLE SOLUTION</th>
+                    <th>AVAILABLE SOLUTION</th>
+                    </span>
+                    </td>
+                    <td>
+                        <span>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>
+                        </span>
                     </td>
                     <td>
-                        <span></span>
-                    </td>
-                    <td>
-                        <span></span>
+                        <span>
+                        </span>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span>
-                            <th>ALTERNATE SOLUTION</th>
+                    <th>ALTERNATE SOLUTION</th>
+                    </span>
+                    </td>
+                    <td>
+                        <span>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>
+                        </span>
                     </td>
                     <td>
-                        <span></span>
-                    </td>
-                    <td>
-                        <span></span>
+                        <span>
+                        </span>
                     </td>
                 </tr>
             </tbody>
