--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHEMISTRY POLYMERS ASSIGNMENT</title>
     <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
-    <link rel="stylesheet" href="./assets/style.3a2a908e.css">
+    <link rel="stylesheet" href="./assets/style.fd99f869.css">
   </head>
   <body>
     <div id="app">
@@ -35,9 +35,9 @@
         <p>Rajaniraiyn R (21BEC107)</p>
         <p>Tejaswini T (21BEC164)</p>
         <p>Varun M P (21BME095)</p>
-        <form action="pages/page1.html">
-        <input type="button" onclick="location.href = 'pages/page1.html';" value="NEXT">
-        </form>
+        <button>
+          <a href="pages/page1">NEXT</a>
+        </button>
       </div>
      
     </div>
