Did html for all pages

--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href ="/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,27 +12,29 @@
 
     <div id="app">
         <header>
-            <h1>Plastic 1</h1>
+            <h1>Plastic 3 - Ballpoint pen barrel</h1>
             <nav>
-                <a href="..">Home</a>
-                <a href="page1">Page1</a>
-                <a href="page2">Page2</a>
-                <a href="page3">Page3</a>
-                <a href="page4">Page4</a>
-                <a href="page5">Page5</a>
+                <a href="/index.html">Home</a>
+                <a href="/pages/page1/index.html"><b>Page1</b></a>
+                <a href="/pages/page2/index.html"><b>Page2</b></a>
+                <a href="/pages/page3/index.html"><b>Page3</b></a>
+                <a href="/pages/page4/index.html"><b>Page4</b></a>
+                <a href="/pages/page5/index.html"><b>Page5</b></a>
             </nav>
         </header>
         <div class="container">
-            <img src="" alt="">
+            <img src="https://img3.exportersindia.com/product_images/bc-full/2019/6/6077538/use-throw-pens-barrel-1560348610-4948843.jpeg" >
             <p></p>
         </div>
         <div class="container2">
-            <img src="" alt="">
-            <p></p>
-            <img src="" alt="">
-            <p></p>
+            <h3>Polystyrene</h3>
+            <h4>Structure</h4>
+            <p>(C₈H₈)ₙ </p>
+            <h4>Properties</h4>
+            <p>General-purpose polystyrene is clear, hard, and brittle. It is an inexpensive resin per unit weight. It is a poor barrier to oxygen and water vapour and has a relatively low melting point. </p>
+            
         </div>
-        <table>
+        <table border = 3>
             <tbody>
                 <tr>
                     <td>
@@ -67,6 +70,9 @@
                 </tr>
             </tbody>
         </table>
+        <button>
+            <a href="/pages/page4/index.html">NEXT</a>
+          </button>
     </div>
     <script type="module" src="../main.js"></script>
 </body>
