--- a/pages/page4/index.html
+++ b/pages/page4/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href ="/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,27 +12,26 @@
 
     <div id="app">
         <header>
-            <h1>Plastic 1</h1>
-            <nav>
-                <a href="..">Home</a>
-                <a href="page1">Page1</a>
-                <a href="page2">Page2</a>
-                <a href="page3">Page3</a>
-                <a href="page4">Page4</a>
-                <a href="page5">Page5</a>
-            </nav>
+            <h1>Plastic 4 - Umbrella</h1>
+            <a href="/index.html"><b>Home</b></a>
+                <a href="/pages/page1/index.html"><b>Page1</b></a>
+                <a href="/pages/page2/index.html"><b>Page2</b></a>
+                <a href="/pages/page3/index.html"><b>Page3</b></a>
+                <a href="/pages/page4/index.html"><b>Page4</b></a>
+                <a href="/pages/page5/index.html"><b>Page5</b></a>
+        
         </header>
         <div class="container">
-            <img src="" alt="">
-            <p></p>
+            <img src="https://www.ikea.com/in/en/images/products/knalla-umbrella-black__0934105_pe792338_s5.jpg">
         </div>
         <div class="container2">
-            <img src="" alt="">
-            <p></p>
-            <img src="" alt="">
-            <p></p>
+            <h3>Polythylene terephthalate</h3>
+            <h4>Structure</h4>
+            <p>(C10H8O4)n</p>
+            <h4>Properties</h4>
+            <p>Polyester is very durable and resistant to shrinking or wrinkling. It is used for umbrellas because it is light-weight and easy to maintain. In addition to all these, polyester dries faster than other materials.It is a highly breathable fabric  </p>
         </div>
-        <table>
+        <table border = 3>
             <tbody>
                 <tr>
                     <td>
@@ -67,6 +67,9 @@
                 </tr>
             </tbody>
         </table>
+        <button>
+            <a href="/pages/page5/index.html">NEXT</a>
+          </button>
     </div>
     <script type="module" src="../main.js"></script>
 </body>
