--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" type="text/css" href ="/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,27 +13,29 @@
 
     <div id="app">
         <header>
-            <h1>Plastic 1</h1>
+            <h1>Plastic 1 - Cellphone case</h1>
             <nav>
-                <a href="..">Home</a>
-                <a href="page1">Page1</a>
-                <a href="page2">Page2</a>
-                <a href="page3">Page3</a>
-                <a href="page4">Page4</a>
-                <a href="page5">Page5</a>
+                <a href="/index.html">Home</a>
+                <a href="/pages/page1/index.html"><b>Page1</b></a>
+                <a href="/pages/page2/index.html"><b>Page2</b></a>
+                <a href="/pages/page3/index.html"><b>Page3</b></a>
+                <a href="/pages/page4/index.html"><b>Page4</b></a>
+                <a href="/pages/page5/index.html"><b>Page5</b></a>
             </nav>
         </header>
+       
         <div class="container">
-            <img src="" alt="">
-            <p></p>
+            <img src="https://www.oberlo.com/media/1603967260-how-i-made-4000-selling-phone-cases.jpg" >
         </div>
-        <div class="container2">
-            <img src="" alt="">
-            <p></p>
-            <img src="" alt="">
-            <p></p>
+            <div class="container2">
+            <h3>Polycarbonate</h3>
+            <h4>Structure</h4>
+            <p>-(-OC6H4)2C(CH3)2CO-)-n</p>
+            <h4>Properties</h4>
+            <p>Polycarbonates used in engineering are strong, tough materials, and some grades are optically transparent. They are easily worked, moulded, and thermoformed. </p>
+            
         </div>
-        <table>
+        <table border = 3>
             <tbody>
                 <tr>
                     <td>
@@ -68,7 +71,11 @@
                 </tr>
             </tbody>
         </table>
+        <button>
+            <a href="/pages/page2/index.html">NEXT</a>
+          </button>
     </div>
+   
     <script type="module" src="../main.js"></script>
 </body>
 
