--- a/pages/page5/index.html
+++ b/pages/page5/index.html
@@ -15,11 +15,11 @@
             <h1>Plastic 1</h1>
             <nav>
                 <a href="..">Home</a>
-                <a href="page1">Page1</a>
-                <a href="page2">Page2</a>
-                <a href="page3">Page3</a>
-                <a href="page4">Page4</a>
-                <a href="page5">Page5</a>
+                <a href="/pages/page1/index.html"><b>Page1</b></a>
+                <a href="/pages/page2/index.html"><b>Page2</b></a>
+                <a href="/pages/page3/index.html"><b>Page3</b></a>
+                <a href="/pages/page4/index.html"><b>Page4</b></a>
+                <a href="/pages/page5/index.html"><b>Page5</b></a>
             </nav>
         </header>
         <div class="container">
