--- a/pages/page4/index.html
+++ b/pages/page4/index.html
@@ -12,7 +12,10 @@
 
     <div id="app">
         <header>
+            <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Libre+Baskerville&display=swap" rel="stylesheet">
             <h1>Plastic 4 - Umbrella</h1>
+            <hr/><br/><br/><br/>
             <a href="/index.html"><b>Home</b></a>
                 <a href="/pages/page1/index.html"><b>Page1</b></a>
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
