--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -2,32 +2,35 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href ="/style.css">
+    <link rel="stylesheet" type="text/css" href ="/pages/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plastic 1</title>
+
 </head>
 
 <body>
 
     <div id="app">
         <header>
+            <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Libre+Baskerville&display=swap" rel="stylesheet">
             <h1>Plastic 1 - Cellphone case</h1>
-            <nav>
+            <hr/><br/><br/><br/>
                 <a href="/index.html">Home</a>
                 <a href="/pages/page1/index.html"><b>Page1</b></a>
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
                 <a href="/pages/page5/index.html"><b>Page5</b></a>
-            </nav>
+           
         </header>
        
         <div class="container">
             <img src="https://www.oberlo.com/media/1603967260-how-i-made-4000-selling-phone-cases.jpg" >
         </div>
-            <div class="container2">
+        <div class="container2">
             <h3>Polycarbonate</h3>
             <h4>Structure</h4>
             <p>-(-OC6H4)2C(CH3)2CO-)-n</p>
