--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -12,15 +12,17 @@
 
     <div id="app">
         <header>
+            <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Libre+Baskerville&display=swap" rel="stylesheet">
             <h1>Plastic 2 - Laptop</h1>
-            <nav>
+            <hr/><br/><br/><br/>
                 <a href="/index.html">Home</a>
                 <a href="/pages/page1/index.html"><b>Page1</b></a>
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
                 <a href="/pages/page5/index.html"><b>Page5</b></a>
-            </nav>
+            
         </header>
         <div class="container">
             <img src="https://media.istockphoto.com/photos/isolated-laptop-on-white-background-stock-photo-picture-id1294325987?b=1&k=20&m=1294325987&s=170667a&w=0&h=MUqxtcCsnCB5SGc9YxSyRkkvZ7vKR0RJEULeEpYgv1M=" >
