--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -12,15 +12,17 @@
 
     <div id="app">
         <header>
+            <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300&family=Libre+Baskerville&display=swap" rel="stylesheet">
             <h1>Plastic 3 - Ballpoint pen barrel</h1>
-            <nav>
+            <hr/><br/><br/><br/>
                 <a href="/index.html">Home</a>
                 <a href="/pages/page1/index.html"><b>Page1</b></a>
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
                 <a href="/pages/page5/index.html"><b>Page5</b></a>
-            </nav>
+            
         </header>
         <div class="container">
             <img src="https://img3.exportersindia.com/product_images/bc-full/2019/6/6077538/use-throw-pens-barrel-1560348610-4948843.jpeg" >
