deploy: 0a60518323a2c36ce7a7994c86d61a1bcfa76efa

--- a/pages/page5/index.html
+++ b/pages/page5/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plastic 5</title>
   <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
-  <link rel="stylesheet" href="./assets/style.fd99f869.css">
+  <link rel="stylesheet" href="./assets/style.651601d7.css">
+  <link rel="stylesheet" href="./assets/style.2862f4a6.css">
 </head>
 
 <body>
@@ -17,11 +18,11 @@
             <h1>Plastic 1</h1>
             <nav>
                 <a href="..">Home</a>
-                <a href="page1">Page1</a>
-                <a href="page2">Page2</a>
-                <a href="page3">Page3</a>
-                <a href="page4">Page4</a>
-                <a href="page5">Page5</a>
+                <a href="/pages/page1/index.html"><b>Page1</b></a>
+                <a href="/pages/page2/index.html"><b>Page2</b></a>
+                <a href="/pages/page3/index.html"><b>Page3</b></a>
+                <a href="/pages/page4/index.html"><b>Page4</b></a>
+                <a href="/pages/page5/index.html"><b>Page5</b></a>
             </nav>
         </header>
         <div class="container">
