--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -20,7 +20,7 @@
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
-                <a href="/pages/page5/index.html"><b>Page5</b></a>
+                <!-- <a href="/pages/page5/index.html"><b>Page5</b></a> -->
             
         </header>
         <div class="container">
@@ -36,38 +36,38 @@
             <p>ABS provides favourable mechanical properties such as impact resistance, toughness, and rigidity when compared with other common polymers. </p>
             
         </div>
-        <table border = 3>
+        <table>
             <tbody>
                 <tr>
                     <td>
                         <span>
-                            <th>AVAILABLE SOLUTION</th>
+                            <th>ABS (AVAILABLE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>low melting point</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>High smoke generation</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>poor wearing properties</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span>
-                            <th>ALTERNATE SOLUTION</th>
+                            <th>Carbon Fibre (ALTERNATE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>poor conductor of heat</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>lightweight</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>flexible</span>
                     </td>
                 </tr>
             </tbody>
