--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -20,7 +20,7 @@
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
-                <a href="/pages/page5/index.html"><b>Page5</b></a>
+                <!-- <a href="/pages/page5/index.html"><b>Page5</b></a> -->
             
         </header>
         <div class="container">
@@ -35,38 +35,32 @@
             <p>General-purpose polystyrene is clear, hard, and brittle. It is an inexpensive resin per unit weight. It is a poor barrier to oxygen and water vapour and has a relatively low melting point. </p>
             
         </div>
-        <table border = 3>
+        <table>
             <tbody>
                 <tr>
                     <td>
                         <span>
-                            <th>AVAILABLE SOLUTION</th>
+                            <th>Polystyrene (AVAILABLE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>Brittle</span>
                     </td>
                     <td>
-                        <span></span>
-                    </td>
-                    <td>
-                        <span></span>
+                        <span>not easily disposable</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span>
-                            <th>ALTERNATE SOLUTION</th>
+                            <th>Styrofoam (ALTERNATE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>Flexible</span>
                     </td>
                     <td>
-                        <span></span>
-                    </td>
-                    <td>
-                        <span></span>
+                        <span>Recyclable</span>
                     </td>
                 </tr>
             </tbody>
