deploy: fa6d7004f7eb427557254193f4c48b69e006980a

--- a/pages/page2/index.html
+++ b/pages/page2/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plastic 2</title>
-  <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
-  <link rel="stylesheet" href="./assets/style.651601d7.css">
-  <link rel="stylesheet" href="./assets/style.2862f4a6.css">
+  <script type="module" crossorigin src="./assets/modulepreload-polyfill.b7f2da20.js"></script>
+  <link rel="stylesheet" href="./assets/style.85d875ed.css">
 </head>
 
 <body>
@@ -23,7 +22,7 @@
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
-                <a href="/pages/page5/index.html"><b>Page5</b></a>
+                <!-- <a href="/pages/page5/index.html"><b>Page5</b></a> -->
             
         </header>
         <div class="container">
@@ -39,38 +38,38 @@
             <p>ABS provides favourable mechanical properties such as impact resistance, toughness, and rigidity when compared with other common polymers. </p>
             
         </div>
-        <table border = 3>
+        <table>
             <tbody>
                 <tr>
                     <td>
                         <span>
-                            <th>AVAILABLE SOLUTION</th>
+                            <th>ABS (AVAILABLE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>low melting point</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>High smoke generation</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>poor wearing properties</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span>
-                            <th>ALTERNATE SOLUTION</th>
+                            <th>Carbon Fibre (ALTERNATE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>poor conductor of heat</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>lightweight</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>flexible</span>
                     </td>
                 </tr>
             </tbody>
