--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plastic 3</title>
-  <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
-  <link rel="stylesheet" href="./assets/style.651601d7.css">
-  <link rel="stylesheet" href="./assets/style.2862f4a6.css">
+  <script type="module" crossorigin src="./assets/modulepreload-polyfill.b7f2da20.js"></script>
+  <link rel="stylesheet" href="./assets/style.85d875ed.css">
 </head>
 
 <body>
@@ -23,7 +22,7 @@
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
-                <a href="/pages/page5/index.html"><b>Page5</b></a>
+                <!-- <a href="/pages/page5/index.html"><b>Page5</b></a> -->
             
         </header>
         <div class="container">
@@ -38,38 +37,32 @@
             <p>General-purpose polystyrene is clear, hard, and brittle. It is an inexpensive resin per unit weight. It is a poor barrier to oxygen and water vapour and has a relatively low melting point. </p>
             
         </div>
-        <table border = 3>
+        <table>
             <tbody>
                 <tr>
                     <td>
                         <span>
-                            <th>AVAILABLE SOLUTION</th>
+                            <th>Polystyrene (AVAILABLE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>Brittle</span>
                     </td>
                     <td>
-                        <span></span>
-                    </td>
-                    <td>
-                        <span></span>
+                        <span>not easily disposable</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span>
-                            <th>ALTERNATE SOLUTION</th>
+                            <th>Styrofoam (ALTERNATE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>Flexible</span>
                     </td>
                     <td>
-                        <span></span>
-                    </td>
-                    <td>
-                        <span></span>
+                        <span>Recyclable</span>
                     </td>
                 </tr>
             </tbody>
