--- a/pages/page4/index.html
+++ b/pages/page4/index.html
@@ -5,9 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plastic 4</title>
-  <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
-  <link rel="stylesheet" href="./assets/style.651601d7.css">
-  <link rel="stylesheet" href="./assets/style.2862f4a6.css">
+  <script type="module" crossorigin src="./assets/modulepreload-polyfill.b7f2da20.js"></script>
+  <link rel="stylesheet" href="./assets/style.85d875ed.css">
 </head>
 
 <body>
@@ -23,51 +22,51 @@
                 <a href="/pages/page2/index.html"><b>Page2</b></a>
                 <a href="/pages/page3/index.html"><b>Page3</b></a>
                 <a href="/pages/page4/index.html"><b>Page4</b></a>
-                <a href="/pages/page5/index.html"><b>Page5</b></a>
+                <!-- <a href="/pages/page5/index.html"><b>Page5</b></a> -->
         
         </header>
         <div class="container">
             <img src="https://www.ikea.com/in/en/images/products/knalla-umbrella-black__0934105_pe792338_s5.jpg">
         </div>
         <div class="container2">
-            <h3>Polythylene terephthalate</h3>
+            <h3>Polyethylene terephthalate</h3>
             <h4>Structure</h4>
             <p>(C10H8O4)n</p>
             <h4>Properties</h4>
             <p>Polyester is very durable and resistant to shrinking or wrinkling. It is used for umbrellas because it is light-weight and easy to maintain. In addition to all these, polyester dries faster than other materials.It is a highly breathable fabric  </p>
         </div>
-        <table border = 3>
+        <table>
             <tbody>
                 <tr>
                     <td>
                         <span>
-                            <th>AVAILABLE SOLUTION</th>
+                            <th>Polyethylene terephthalate (AVAILABLE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>Non-biodegradable</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>generates toxic emission</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>lower heat resistance</span>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <span>
-                            <th>ALTERNATE SOLUTION</th>
+                            <th>Bio-degradable nylon (ALTERNATE SOLUTION)</th>
                         </span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>Bio-degradable</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>non-toxic</span>
                     </td>
                     <td>
-                        <span></span>
+                        <span>resistant to environment</span>
                     </td>
                 </tr>
             </tbody>
