--- a/pages/page5/index.html
+++ b/pages/page5/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plastic 5</title>
-  <script type="module" crossorigin src="./assets/style.7f2dd081.js"></script>
-  <link rel="stylesheet" href="./assets/style.651601d7.css">
-  <link rel="stylesheet" href="./assets/style.2862f4a6.css">
+  <script type="module" crossorigin src="./assets/modulepreload-polyfill.b7f2da20.js"></script>
+  <link rel="stylesheet" href="./assets/style.85d875ed.css">
 </head>
 
 <body>
